frontend/test/should_fail/iterated_query_in_condition.grg
test foo()
{
	if { [?it].extract<bar>().sum() > 10; } // on lhs only in yield expression allowed
	
	iterated it {
		.;
	---
		def var bar:double = 1;
	}
}
